[fix] fixed styling alignment of grid on tickets

--- a/client/src/components/Tickets/ticketstyles.css
+++ b/client/src/components/Tickets/ticketstyles.css
@@ -24,7 +24,8 @@
   display: grid;
   grid-gap: 10px;
   /* grid-template-columns: minmax(100px, max-content); */
-  grid-template-columns: 25%, 25%, 25%, 25%;
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: auto, auto, auto, auto; */
   /* background-color: white; */
 }
 
